# web-riscv-vm

./: Cargo.toml  README.md
code_examples/project_1/: Cargo.toml  riscv32ima.json  rust_riscv.elf  rust_riscv.s  rust_riscv_2024_12_31_17_00.s  rust_riscv_2025_02_23.s
code_examples/project_1/src/: main.rs
code_examples/scripts/: build_human_readable_riscv_assembly.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: lib.rs  main.rs
src/emulator/: emulator.rs  instruction_formats.rs  instruction_signatures.rs  mod.rs  rv32i.rs
